[package]
name = "hcaptcha"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace  = true
readme.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true

[features]
default = ["ext"]
ext = ["hex"]
enterprise = []
trace = ["tracing"]
nightly = []

[dependencies]
async-trait.workspace = true
hex = { version = "0.4", optional = true }
reqwest.workspace = true 
serde_json.workspace = true
serde_urlencoded.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing = { version = "0.1.36", features = ["log", "attributes"], optional = true }
uuid = { workspace = true, features = ["v4"] }
url.workspace = true 
hcaptcha_derive = { version = "2.0.0", path = "../hcaptcha_derive" }

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
mockd.workspace = true
hex.workspace = true
itertools.workspace = true
lambda_runtime.workspace = true
log.workspace = true
rand.workspace = true
tokio.workspace = true
simple_logger.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
rusoto_core.workspace = true
rusoto_ses.workspace = true
wiremock.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
