[package]
name = "hcaptcha_derive"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true

[lib]
name = "hcaptcha_derive"
proc-macro = true

[dependencies]
syn.worspace = true
quote.worspace = true
proc-macro2.worspace = true
proc-macro-error.worspace = true

[dev-dependencies]
hcaptcha = { path = "../hcaptcha" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
