[package]
name = "test_suite"
publish = false
version = "0.2.0"
edition = "2021"

[dependencies]

[dev-dependencies]
chrono = "0.4"
claims = "0.7"
env_logger = "0.9"
hcaptcha = { path = "../hcaptcha" }
hcaptcha_derive = { path = "../hcaptcha_derive" }
hex = "0.4"
itertools = "0.10"
mockd = "0.3"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"
wiremock = "0.5"
